Fix spacing

--- a/src/components/css/section_landing.module.css
+++ b/src/components/css/section_landing.module.css
@@ -74,7 +74,7 @@ div.title{
 .typedcontainer
 {
     height: 24px;
-    margin-top: 20px;
+    margin-top: 6px;
     font-size: 24px;
 }
 
